--- a/Assignment_51.3/index.html
+++ b/Assignment_51.3/index.html
@@ -9,31 +9,31 @@
   <body class="p-5">
     <div class="flex gap-4 flex-wrap">
     <div class="shadow-2xl flex flex-col items-start pb-5 max-w-xs">
-      <img class="object-cover h-60 w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTzf5QSKsLTvVK_t2nU0NVaw4p3WOTrXP-tg&s">
+      <img class="object-cover h-60 w-full" src="https://assets.weforum.org/article/image/responsive_large_0ZUBmNNVLRCfn3NdU55nQ00UF64m2ObtcDS0grx02fA.jpg">
       <h2 class="text-xl text-black mx-2 my-2">Seamlessly Visualise quality</h2>
       <p class="grow text-gray-500 mx-2  mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <a class="bg-gray-500 text-white px-8 py-2 mx-2 self-center" href="https://google.com">Here's Why</a>
     </div>
     <div class="shadow-2xl flex flex-col items-start pb-5 max-w-xs">
-      <img class="object-cover h-60 w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNkkpnEA7jzfnhMvTPYLPAGNoq0jVx2ikpUQ&s">
+      <img class="object-cover h-60 w-full" src="https://media.istockphoto.com/id/517188688/photo/mountain-landscape.jpg?s=1024x1024&w=0&k=20&c=z8_rWaI8x4zApNEEG9DnWlGXyDIXe-OmsAyQ5fGPVV8=">
       <h2 class="text-xl text-black mx-2 my-2">Completely Synergize</h2>
       <p class="text-gray-500 mx-2  mb-3 grow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <a class="bg-gray-500 text-white px-8 py-2 mx-2 self-center" href="https://google.com">Here's Why</a>
     </div>
     <div class="shadow-2xl flex flex-col items-start pb-5 max-w-xs">
-      <img class="object-cover h-60 w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTTHe5LjZJOsjUfyhdQbJU4tKkdySL_JvYjw&s">
+      <img class="object-cover h-60 w-full" src="https://onetreeplanted.org/cdn/shop/articles/nature_facts_600x.jpg?v=1705008496">
       <h2 class="text-xl text-black mx-2 my-2">Dynamically Procastinate</h2>
       <p class="text-gray-500 mx-2  mb-3 grow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <a class="bg-gray-500 text-white px-8 py-2 mx-2 self-center" href="https://google.com">Here's Why</a>
     </div>
     <div class="shadow-2xl flex flex-col items-start pb-5 max-w-xs">
-      <img class="object-cover h-60 w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy7HqiHWCRVO0LVBAn5_zxskAMT5Pr2W7p6A&s">
+      <img class="object-cover h-60 w-full" src="https://static.vecteezy.com/system/resources/thumbnails/049/855/347/small_2x/nature-background-high-resolution-wallpaper-for-a-serene-and-stunning-view-photo.jpg">
       <h2 class="text-xl text-black mx-2 my-2">Best in class</h2>
       <p class="text-gray-500 mx-2  mb-3 grow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <a class="bg-gray-500 text-white px-8 py-2 mx-2 self-center" href="https://google.com">Here's Why</a>
     </div>
     <div class="shadow-2xl flex flex-col items-start pb-5 max-w-xs">
-      <img class="object-cover h-60 w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpzOCMvLcWOgGCWWz1T4nVoWYfzznYpRFVEw&s">
+      <img class="object-cover h-60 w-full" src="https://media.istockphoto.com/id/2181735944/photo/natural-mountains-landscapes.jpg?b=1&s=612x612&w=0&k=20&c=7WJMhHseLhVBEDa8N7ww7J_oqm_w_PlvUlxZPsmF3UI=">
       <h2 class="text-xl text-black mx-2 my-2">Dynamically innovate supply chains</h2>
       <p class="text-gray-500 mx-2  mb-3 grow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <a class="bg-gray-500 text-white px-8 py-2 mx-2 self-center" href="https://google.com">Here's Why</a>
